<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="34dp"
    android:background="#ffffffff">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/ty_net_pool_wifi"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name"
        android:hint="@string/ty_net_pool_pwd"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:maxLines="1"
        />

    <TextView android:id="@+id/tv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ty_net_pool_add_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_pwd"
        android:layout_marginTop="20dp" />
</RelativeLayout>