<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/ty_net_pool_device_net_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_current_tip"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ty_net_pool_current_net_tip"
                android:visibility="gone"
                android:textColor="#80000000"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:id="@+id/ll_dev_current_wifi_wrapper"
                android:background="#ffffffff"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_checked"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="11dp"
                    android:src="@drawable/net_pool_choosed"
                    app:tint="#ffff5a28" />

                <TextView
                    android:id="@+id/tv_current_ssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#e6000000"
                    android:textSize="16sp" />

                <ImageView android:layout_height="19dp"
                    android:layout_width="18dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:id="@+id/iv_intensity"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/tv_standby_tip"
                android:text="@string/ty_net_pool_device_net_standby"
                android:textColor="#80000000"
                android:visibility="gone"
                android:textSize="13sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recycler_device_standby_net"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffffff"
                android:dividerHeight="0px" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="26dp" />

            <RelativeLayout
                android:background="#ffffffff"
                android:layout_width="match_parent"
                android:id="@+id/rl_other"
                android:layout_height="56dp">

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="51dp"
                    android:layout_marginRight="51dp"
                    android:textSize="16sp"
                    android:text="@string/ty_net_pool_other"
                    android:layout_centerVertical="true"
                    android:textColor="#e6000000"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>