<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/ty_net_pool_device_net_info" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="#ffffffff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/ll_device_net_wrapper"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:maxLines="1"
                    android:text="@string/ty_net_pool_device_net_name"
                    android:textColor="#e6000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_device_net_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="#80000000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:id="@+id/iv_net"
                    android:scaleType="fitXY"
                    android:src="@drawable/arrow_more"
                    app:tint="#33000000" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:id="@+id/ll_standby_wrapper"
                android:layout_marginTop="16dp"
                android:background="#ffffffff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:maxLines="1"
                    android:text="@string/ty_net_pool_device_net_standby"
                    android:textColor="#e6000000"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/arrow_more"
                    app:tint="#33000000" />
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
